add metrics for dns service & env switching

--- a/services/domain-name-service/Makefile
+++ b/services/domain-name-service/Makefile
@@ -42,4 +42,5 @@ run:
 			-e APP_NAME=${PROJECT_NAME} \
 			-e ENV=PRODUCTION \
 			-e GRPC_PORT=10000 -p 10000:10000 \
+			-e METRICS_PORT=10001 -p 10001:10001 \
 			${PROJECT_NAME}
