--- a/services/domain-name-service/docker-compose.yml
+++ b/services/domain-name-service/docker-compose.yml
@@ -19,8 +19,10 @@ services:
     build: .
     ports:
       - "10000:10000"
+      - "10001:10001"
     environment:
       - "GRPC_PORT=10000"
+      - "METRICS_PORT=10001"
       - "ENV=PRODUCTION"
     networks:
       - zoo
